# Metronome

./: .gitignore  CMakeLists.txt  conanfile.txt
res/: TimeRadioButton.qml  main.qml
src/: main.cpp  timer.cpp  timer.h
